Changed as requested

--- a/Kapitel/02_App/01_View/Karte/InfoAnzeige/main.tex
+++ b/Kapitel/02_App/01_View/Karte/InfoAnzeige/main.tex
@@ -29,22 +29,22 @@ Es wird folgendes angezeigt:
     \begin{itemize}
         \item Gibt es sehr viele globale Aliasse, sodass die Kategorie über 3 Zeilen lang ist, werden nur 
         die ersten 3 Zeilen angezeigt. Rechts unten befindet sich dann ein Button \dq{}mehr anzeigen\dq{}. 
-        Wird auf diesen Button geklickt werden an gleicher Stelle  alle globalen Aliasse angezeigt. 
+        Wird auf diesen Button geklickt werden an gleicher Stelle alle globalen Aliasse angezeigt. 
         Der Button enthält dann den Text \dq{}weniger anzeigen\dq{}. Wird er nun geklickt wird wieder nur die 
         reduzierte Anzahl globaler Aliasse angezeigt und der Button zeigt wieder \dq{}mehr anzeigen\dq{}.
         \item Gibt es noch keine globalen Aliasse wird ein Text angezeigt. Dieser Text weist den Benutzer 
         darauf hin, dass es noch keine globalen Aliasse gibt und dass der Benutzer selbst einen vorschlagen kann.
     \end{itemize}
-    Neben der Überschrift befindet sich auf der rechten Seite ein Button auf dem \dq{}Vorschlagen\dq{} oder ein gleichbedeutendes Symbol steht.
+    Neben der Überschrift befindet sich auf der rechten Seite ein Button, auf dem \dq{}Vorschlagen\dq{} oder ein gleichbedeutendes Symbol steht.
     Wird auf diesen Button geklickt, wird dies dem ViewModel mitgeteilt.
     \item Lokale Aliasse: Es werden lokale Aliasse für dieses Kartenobjekt angezeigt. 
     \begin{itemize}
         \item Gibt es sehr viele lokale Aliasse, sodass die Kategorie über 3 Zeilen lang ist, werden nur 
         die ersten 3 Zeilen angezeigt. Rechts unten befindet sich dann ein Button \dq{}mehr anzeigen\dq{}. 
-        Wird auf diesen Button geklickt werden an gleicher Stelle alle lokalen Aliasse angezeigt. 
-        Der Button enthält dann den Text \dq{}weniger anzeigen\dq{}. Wird er nun geklickt wird wieder nur die 
+        Wird auf diesen Button geklickt, werden an gleicher Stelle alle lokalen Aliasse angezeigt. 
+        Der Button enthält dann den Text \dq{}weniger anzeigen\dq{}. Wird er nun geklickt, wird wieder nur die 
         reduzierte Anzahl lokaler Aliasse angezeigt und der Button zeigt wieder \dq{}mehr anzeigen\dq{}.
-        \item Gibt es noch keine lokalen Aliasse wird ein Text angezeigt. Dieser Text weißt den Benutzer 
+        \item Gibt es noch keine lokalen Aliasse wird ein Text angezeigt. Dieser Text weist den Benutzer 
         darauf hin, dass es noch keine lokalen Aliasse gibt und dass der Benutzer selbst einen hinzufügen kann.
         \item Gibt es mindestens einen lokalen Alias, so wird unter den Aliassen ein Text angezeigt, 
         der den Benutzer darauf hinweist, dass er durch langes Klicken auf einen lokalen Alias, diesen 
