Fix typos as requested in 'MapIDService(Imp)'

--- a/Kapitel/00_Backend/Services/MapIDService/getAllMapIDs_ListInt/main.tex
+++ b/Kapitel/00_Backend/Services/MapIDService/getAllMapIDs_ListInt/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{getMapIDByName() : List<mapID : int>}}%$$$M
+\paragraph{\texttt{getAllMapIDs() : List<mapID : int>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Definiert das Erteilen der Anweisung an Klasse \texttt{MapIDRepository}, eine Liste aller IDs der in der Datenbank hinterlegten Kartenobjekte zurückzugeben, und gibt diese wiederum zurück.
 \paragraph*{Beschreibung}
