--- a/Kapitel/00_Backend/Services/MapIDService/removeMapObject_int_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/MapIDService/removeMapObject_int_boolean/main.tex
@@ -1,8 +1,8 @@
 \paragraph{\texttt{removeMapObject(mapID : int) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Definiert das Erteilen der Anweisung an Klasse \texttt{MapIDRepository}, ein Kartenobjekt aus Datenbank der Kartenobjekte zu entfernen.
+Definiert das Erteilen der Anweisung an Klasse \texttt{MapIDRepository}, ein Kartenobjekt aus der Datenbank der Kartenobjekte zu entfernen.
 \paragraph*{Beschreibung}
-Die Methode ermöglicht, dass ein Administrator ein Kartenobjekt aus Datenbank der Kartenobjekte entfernen kann.
+Die Methode ermöglicht, dass ein Administrator ein Kartenobjekt aus der Datenbank der Kartenobjekte entfernen kann.
 Dies hat insbesondere zur Folge, dass das Kartenobjekt nicht mehr auf der Karte der App angezeigt wird.
 Hierfür wird die ID des gewünschten Kartenobjekts übergeben.
 \paragraph*{Parameter}
