--- a/Kapitel/00_Backend/Services/MapIDService/getMapObject_int_String/main.tex
+++ b/Kapitel/00_Backend/Services/MapIDService/getMapObject_int_String/main.tex
@@ -2,7 +2,7 @@
 \paragraph*{Kurzbeschreibung}
 Definiert das Erteilen der Anweisung an Klasse \texttt{MapIDRepository}, durch Angabe der ID des Kartenobjekts dessen Namen, d.h. das Kartenobjekt als Zeichenkette, zurückzugeben, und gibt dies wiederum zurück.
 \paragraph*{Beschreibung}
-Die Methode ermöglicht, dass ein Administrator ein Kartenobjekt durch Angabe der ID des Kartenobjkets dessen Namen, d.h. das Kartenobjekt als Zeichenkette, anfragen und zurückbekommen kann.
+Die Methode ermöglicht, dass ein Administrator ein Kartenobjekt durch Angabe der ID des Kartenobjekts dessen Namen, d.h. das Kartenobjekt als Zeichenkette, anfragen und zurückbekommen kann.
 Hierfür wird die ID des gewünschten Kartenobjekts übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
