Created structure and moved map view

--- a/Kapitel/02_App/03_Map/01_View/00_Library/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/00_Library/main.tex
@@ -1,4 +1,4 @@
-\section{Library Osmdroid}
+\subsubsection{Library Osmdroid}
 Die quelloffene Library Osmdroid stellt Werkzeuge und View-Klassen zur Verfügung, die das Anzeigen, 
 Interagieren und Manipulieren von Karten erleichtern.
 Mehr über Osmdroid ist hier zu finden:
