--- a/Kapitel/02_App/main.tex
+++ b/Kapitel/02_App/main.tex
@@ -1,5 +1,9 @@
 \chapter{App}
 
+\inprelmod{01_Architektur}
+\inprelmod{02_Paketdiagramm}
+\inprelmod{03_Map}
+
 \inprelmod{01_View}
 \inprelmod{02_ViewModel}
 \inprelmod{03_Model}
