--- a/Kapitel/02_App/03_Map/01_View/LevelChangeDisplay/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/LevelChangeDisplay/main.tex
@@ -1,4 +1,4 @@
-\section{LevelChangeDisplay}
+\subsubsection{LevelChangeDisplay}
 \paragraph*{Typ}
 Composable.
 \paragraph*{Beschreibung}
@@ -15,7 +15,7 @@ LevelChangeDisplay die Informationen zur aktuellen Etage. Wird einer der Buttons
 Wechseln der Etage betätigt, meldet diese Klasse dies dem LevelChangeController, 
 die sich um den Etagenwechsel kümmert.
 
-\subsubsection{\texttt{+ onClickUp()}}%$$$M
+\subsubsection*{\texttt{+ onClickUp()}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Veranlasst den Etagenwechsel nach oben.
 \paragraph*{Beschreibung}
@@ -28,7 +28,7 @@ Keine.
 \paragraph*{Rückgabewert}
 Void.
 
-\subsubsection{\texttt{+ onClickDown()}}%$$$M
+\subsubsection*{\texttt{+ onClickDown()}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Veranlasst den Etagenwechsel nach unten.
 \paragraph*{Beschreibung}
@@ -41,7 +41,7 @@ Keine.
 \paragraph*{Rückgabewert}
 Void.
 
-\subsubsection{Weitere private Funktionalität}%$$$M
+\subsubsection*{Weitere private Funktionalität}%$$$M
 Beobachtete Daten von LevelChangeController und Funktionalität:
 \begin{itemize}
     \item isHighestLevel: Wird die oberste Etage angezeigt, wird der Button nach oben ausgegraut 
