--- a/Kapitel/02_App/03_Map/01_View/MapObjectMarker/main.tex
+++ b/Kapitel/02_App/03_Map/01_View/MapObjectMarker/main.tex
@@ -1,4 +1,4 @@
-\section{MapObjectMarker}
+\subsubsection{MapObjectMarker}
 \paragraph*{Typ}
 Abstrakte Klasse, erbt von Marker.
 \paragraph*{Beschreibung}
@@ -7,7 +7,7 @@ Das Verhalten beim Antippen des Markers ist in dieser Klasse definiert.
 Diese Klasse benutzt eine Strategie. Das Verhalten, wenn das Kartenobjekt fokussiert wird,
 wird in die Subklassen ausgelagert, da dies je nach Kartenobjekttyp variiert.
 
-\subsubsection{\texttt{+ <<create>> MapObjectMarker(mapView : MapView, data : DisplayData, tileMarkerOverlay : TileMarkerOverlay)}}%$$$M
+\subsubsection*{\texttt{+ <<create>> MapObjectMarker(mapView : MapView, data : DisplayData, tileMarkerOverlay : TileMarkerOverlay)}}%$$$M
 \paragraph*{Beschreibung}
 Erstellt eine neue MapObjectMarker-Instanz.
 \paragraph*{Parameter}
@@ -18,7 +18,7 @@ Erstellt eine neue MapObjectMarker-Instanz.
     auf diesen Marker mitgeteilt wird. Darf null sein.
 \end{itemize}
 
-\subsubsection{\texttt{+ getMapId() : int}}%$$$M
+\subsubsection*{\texttt{+ getMapId() : int}}%$$$M
 \paragraph*{Beschreibung}
 Gibt MapId des KartenObjekts des Markers zurück.
 \paragraph*{Parameter}
@@ -26,7 +26,7 @@ Keine.
 \paragraph*{Rückgabewert}
 int, MapId des Kartenobjekt des Markers.
 
-\subsubsection{\texttt{+ onSingleTapConfirmed(e : MotionEvent, mapView : MapView) : boolean}}%$$$M
+\subsubsection*{\texttt{+ onSingleTapConfirmed(e : MotionEvent, mapView : MapView) : boolean}}%$$$M
 \paragraph*{Beschreibung}
 Das Anklicken dieses Markers wird der TileMarkerOverlay-Instanz mitgeteilt.
 \paragraph*{Parameter}
@@ -38,7 +38,7 @@ Für die Verarbeitung werden beide Parameter nicht benutzt. Diese sind durch Ove
 \paragraph*{Rückgabewert}
 boolean, gibt true zurück, da das MotionEvent verarbeitet wurde.
 
-\subsubsection{\texttt{+ focusMarkerObject(floorMapExists : boolean) $\lbrace$abstract$\rbrace$}}%$$$M
+\subsubsection*{\texttt{+ focusMarkerObject(floorMapExists : boolean) $\lbrace$abstract$\rbrace$}}%$$$M
 \paragraph*{Beschreibung}
 Beschreibt das (graphische) Verhalten des Markers, wenn das zugehörige Objekt fokussiert wird.
 \paragraph*{Parameter}
@@ -48,7 +48,7 @@ Beschreibt das (graphische) Verhalten des Markers, wenn das zugehörige Objekt f
 \paragraph*{Rückgabewert}
 Void.
 
-\subsubsection{\texttt{+ resetFocus() $\lbrace$abstract$\rbrace$}}%$$$M
+\subsubsection*{\texttt{+ resetFocus() $\lbrace$abstract$\rbrace$}}%$$$M
 \paragraph*{Beschreibung}
 Setzt das Aussehen des Markers zurück, wenn er nicht mehr fokussiert wird.
 \paragraph*{Parameter}
@@ -57,13 +57,13 @@ Keine.
 Void.
 
 %-------------------------------------------------------------
-\section{BuildingMarker}
+\subsubsection{BuildingMarker}
 \paragraph*{Typ} 
 Erbt von MapObjectMarker.
 \paragraph*{Beschreibung}
 MapObjectMarker für Gebäude.
 
-\subsubsection{\texttt{+ focusMarkerObject(floorMapExists : boolean)}}%$$$M
+\subsubsection*{\texttt{+ focusMarkerObject(floorMapExists : boolean)}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Beschreibt das (graphische) Verhalten des Markers, wenn das zugehörige Gebäude fokussiert wird.
 \paragraph*{Beschreibung}
@@ -76,18 +76,18 @@ Gibt es keine Etagenkarte, wird der Marker als großer Standort-Pfeil angezeigt.
 \paragraph*{Rückgabewert}
 Void.
 
-\subsection{Weitere Implementierungen}
+\subsubsection*{Weitere Implementierungen}
 Diese Klasse implementiert ebenfalls die abstrakte Methode resetFocus von MapObjectMarker 
 und benutzt den gleichen (geerbten) Konstruktor.
 
 %-------------------------------------------------------------
-\section{RoomMarker}
+\subsubsection{RoomMarker}
 \paragraph*{Typ} 
 Erbt von MapObjectMarker.
 \paragraph*{Beschreibung}
 MapObjectMarker für Räume.
 
-\subsubsection{\texttt{+ focusMarkerObject(floorMapExists : boolean)}}%$$$M
+\subsubsection*{\texttt{+ focusMarkerObject(floorMapExists : boolean)}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Beschreibt das (graphische) Verhalten des Markers, wenn der zugehörige Raum fokussiert wird.
 \paragraph*{Beschreibung}
@@ -99,6 +99,6 @@ Der Marker als großer Standort-Pfeil angezeigt.
 \paragraph*{Rückgabewert}
 Void.
 
-\subsection{Weitere Implementierungen}
+\subsection*{Weitere Implementierungen}
 Diese Klasse implementiert ebenfalls die abstrakte Methode resetFocus von MapObjectMarker 
 und benutzt den gleichen (geerbten) Konstruktor.
