--- a/preamble.tex
+++ b/preamble.tex
@@ -7,6 +7,7 @@
 \usepackage{caption}
 
 \newcounter{user_data_end}
+\setcounter{secnumdepth}{3}%gibt Subsubsections Nummerierung
 
 \newcommand{\glossaryentry}[3] {
     \newglossaryentry{#1}{
