--- a/Kapitel/02_App/03_Map/02_ViewModel/LevelModeController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/LevelModeController/main.tex
@@ -1,11 +1,11 @@
-\subsection{LevelModeController}
+\subsubsection{LevelModeController}
 \paragraph*{Typ}
 Implementiert MapLayerDataController, LevelChangeController.
 \paragraph*{Beschreibung}
 Diese Klasse steuert den Etagenmodus. Sie stellt alle benötigten Daten bereit, um die aktuelle Etage anzuzeigen. 
 Sie stellt alle benötigten Aufrufe bereit, um Interaktionen mit der Etagenkarte zu verarbeiten.
 
-\subsubsection{\texttt{+ <<create>> LevelModeController(dataProvider : IMapDataProvider)}}%$$$M
+\subsubsection*{\texttt{+ <<create>> LevelModeController(dataProvider : IMapDataProvider)}}%$$$M
 \paragraph*{Beschreibung}
 Erstellt einen neuen LevelModeController.
 \paragraph*{Parameter}
@@ -13,7 +13,7 @@ Erstellt einen neuen LevelModeController.
     \item dataProvider : IMapDataProvider IMapDataProvider von dem diese Klasse die Kartendaten bezieht.
 \end{itemize}
 
-\subsubsection{\texttt{+ startLevelMode(mapId : int)}}%$$$M
+\subsubsection*{\texttt{+ startLevelMode(mapId : int)}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Startet die Etagenansicht eines Gebäudes.
 \paragraph*{Beschreibung}
