--- a/Kapitel/02_App/03_Map/02_ViewModel/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/main.tex
@@ -1,5 +1,12 @@
+\subsection{ViewModel}
 
+%Interfaces
 \inprelmod{MapDisplayDataProvider}
 \inprelmod{MapLayerDataController}
 \inprelmod{LevelChangeController}
 \inprelmod{IMapObjectInfoController}
+
+%Classes
+\inprelmod{MapController}
+\inprelmod{BuildingModeController}
+\inprelmod{LevelModeController}
