--- a/Kapitel/02_App/03_Map/02_ViewModel/MapController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapController/main.tex
@@ -1,6 +1,6 @@
-\subsection{MapController}
+\subsubsection{MapController}
 \paragraph*{Typ}
-Implementiert MapLayerDataController.
+Implementiert MapDisplayDataProvider.
 \paragraph*{Beschreibung}
 Diese Klasse steuert die Karte im Allgemeinen. Das heißt: Diese Klasse stellt die Karte (Straßenkarte) bereit 
 und stellt die benötigten Daten zum Verschieben der Karte bereit (wie Position zu der sie verschoben werden soll).\\
@@ -8,7 +8,7 @@ Diese Klasse ist insbesondere für die Verarbeitung und Steuerung des Fokus der 
 Kartenansicht verantwortlich (z.B. wenn ein Gebäude über die Suche gefunden wurde und angezeigt werden muss).
 Diese Information ist durch den Wechsel zwischen Ansichten durch NavHost und NavGraph verfügbar.
 
-\subsubsection{\texttt{+ <<create>> MapController(dataProvider : IMapDataProvider)}}%$$$M
+\subsubsection*{\texttt{+ <<create>> MapController(dataProvider : IMapDataProvider)}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erstellt einen neuen MapController.
 \paragraph*{Beschreibung}
