--- a/Kapitel/02_App/03_Map/02_ViewModel/MapLayerDataController/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/MapLayerDataController/main.tex
@@ -1,4 +1,4 @@
-\section{MapLayerDataController}
+\subsubsection{MapLayerDataController}
 \paragraph*{Typ} 
 Interface
 \paragraph*{Beschreibung}
@@ -8,7 +8,7 @@ Daten für die Karte als LiveData-Objekte herausgegeben.\\
 Außerdem wird die Änderung dieser Daten spezifiziert, wenn ein Objekt ausgewählt wird, dessen
 Daten im MapLayerDataController verwaltet werden.
 
-\subsubsection{\texttt{+ selectMapObject(mapId : int)}}%$$$M
+\subsubsection*{\texttt{+ selectMapObject(mapId : int)}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode fokussiert das richtige Element, nachdem ein Kartenobjekt ausgewählt wurde.
 \paragraph*{Beschreibung}
@@ -23,7 +23,7 @@ aus oder in die Etagenansicht gewechselt werden.
 \paragraph*{Rückgabewert}
 Void.
 
-\subsubsection{\texttt{+ getTileSource() : LiveData<\href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}{ITileSource}>}}%$$$M
+\subsubsection*{\texttt{+ getTileSource() : LiveData<\href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}{ITileSource}>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
 {ITileSource} mit den Daten für eine Kartenebene zurück.
@@ -35,7 +35,7 @@ Keine.
 LiveData<\href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
 {ITileSource}> mit den Kartendaten, darf null sein.
 
-\subsubsection{\texttt{+ getMapObjectData() : LiveData<List<DisplayData>>}}%$$$M
+\subsubsection*{\texttt{+ getMapObjectData() : LiveData<List<DisplayData>>}}%$$$M
 \paragraph*{Beschreibung}
 Gibt die Anzeige-Daten der Kartenobjekte zurück.
 \paragraph*{Parameter}
@@ -43,7 +43,7 @@ Keine.
 \paragraph*{Rückgabewert}
 LiveData<List<DisplayData>> mit den Daten der Kartenobjekte.
 
-\subsubsection{\texttt{+ getFocusedMapId() : LiveData<int>}}%$$$M
+\subsubsection*{\texttt{+ getFocusedMapId() : LiveData<int>}}%$$$M
 \paragraph*{Beschreibung}
 Gibt die MapId des fokussierten Kartenobjekts zurück.
 \paragraph*{Parameter}
@@ -51,7 +51,7 @@ Keine.
 \paragraph*{Rückgabewert}
 LiveData<int> MapId des fokussierten Kartenobjekts.
 
-\subsubsection{\texttt{+ isLevelMode() : LiveData<boolean>}}%$$$M
+\subsubsection*{\texttt{+ isLevelMode() : LiveData<boolean>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt zurück, ob das fokussierte Kartenobjekt auf einer Etage ist.
 \paragraph*{Beschreibung}
