--- a/Kapitel/02_App/03_Map/02_ViewModel/main.tex
+++ b/Kapitel/02_App/03_Map/02_ViewModel/main.tex
@@ -1,5 +1,6 @@
 \subsection{ViewModel}
 
+\inprelmod{Klassendiagramm}
 %Interfaces
 \inprelmod{MapDisplayDataProvider}
 \inprelmod{MapLayerDataController}
