--- a/Kapitel/02_App/03_Map/03_Model/MapDataProvider/main.tex
+++ b/Kapitel/02_App/03_Map/03_Model/MapDataProvider/main.tex
@@ -1,10 +1,10 @@
-\section{IMapDataProvider}
+\subsubsection{IMapDataProvider}
 \paragraph*{Typ}
 Interface.
 \paragraph*{Beschreibung}
 Dieses Interface beschreibt die Schnittstelle von Model um Kartendaten anzufordern und zu speichern.
 
-\subsubsection{\texttt{+ getRoomDisplayData(mapId : int, level : int) : LiveData<List<DisplayData>>}}%$$$M
+\subsubsection*{\texttt{+ getRoomDisplayData(mapId : int, level : int) : LiveData<List<DisplayData>>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die Anzeigedaten für Räume einer Etage zurück.
 \paragraph*{Beschreibung}
@@ -18,7 +18,7 @@ Die Liste ist leer, wenn es keine hinterlegten Räume gibt.
 \paragraph*{Rückgabewert}
 LiveData<List<DisplayData>>, DisplayData für Räume einer Etage.
 
-\subsubsection{\texttt{+ getFloorMapTileSource(mapId : int, level : int) : \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
+\subsubsection*{\texttt{+ getFloorMapTileSource(mapId : int, level : int) : \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
 {ITileSource}}}%$$$M
 \paragraph*{Beschreibung}
 Gibt eine \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
@@ -33,7 +33,7 @@ Existiert die angeforderte Etagenkarte nicht auf dem Gerät, wird null zurückge
 \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
 {ITileSource} mit den Kartendaten für die Etage oder null.
 
-\subsubsection{\texttt{+ getBuildingDisplayData() : LiveData<List<DisplayData>>}}%$$$M
+\subsubsection*{\texttt{+ getBuildingDisplayData() : LiveData<List<DisplayData>>}}%$$$M
 \paragraph*{Beschreibung}
 Gibt die Anzeigedaten für alle Gebäude zurück.
 \paragraph*{Parameter}
@@ -41,7 +41,7 @@ Keine.
 \paragraph*{Rückgabewert}
 LiveData<List<DisplayData>>, DisplayData für alle Gebäude.
 
-\subsubsection{\texttt{+ getBuildingTileSource() : \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
+\subsubsection*{\texttt{+ getBuildingTileSource() : \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
 {ITileSource}}}%$$$M
 \paragraph*{Beschreibung}
 Gibt eine \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
@@ -55,7 +55,7 @@ Gibt eine \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tile
 \href{https://osmdroid.github.io/osmdroid/javadocAll/org/osmdroid/tileprovider/tilesource/ITileSource.html}
 {ITileSource} mit den Kartendaten für alle Gebäude.
 
-\subsubsection{\texttt{+ getLastSavedPosition() : IGeoPoint}}%$$$M
+\subsubsection*{\texttt{+ getLastSavedPosition() : IGeoPoint}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die letzte gespeicherte Position zurück.
 \paragraph*{Beschreibung}
@@ -66,7 +66,7 @@ Keine.
 \paragraph*{Rückgabewert}
 IGeoPoint mit letzter gespeicherter Position (oder Default-Wert), ist nie null.
 
-\subsubsection{\texttt{+ savePosition(pos : IGeoPoint)}}%$$$M
+\subsubsection*{\texttt{+ savePosition(pos : IGeoPoint)}}%$$$M
 \paragraph*{Beschreibung}
 Speichert eine Position als letzte Position.
 \paragraph*{Parameter}
