--- a/Kapitel/02_App/03_Map/04_Util/DisplayData/main.tex
+++ b/Kapitel/02_App/03_Map/04_Util/DisplayData/main.tex
@@ -1,4 +1,6 @@
-\section{DisplayData}
+\subsubsection{DisplayData}
+\paragraph*{Typ}
+Klasse.
 \paragraph*{Beschreibung}
 Diese Klasse ist ein Container für Daten, die zum Anzeigen eines Kartenobjekts auf der 
 Karte benötigt werden. Dies sind insbesondere
@@ -8,7 +10,7 @@ Karte benötigt werden. Dies sind insbesondere
     \item die MapId des Kartenobjekts.
 \end{itemize}
 
-\subsubsection{\texttt{+ <<create>> DisplayData(latitude : double, longitude : double, name : String, mapId : int)}}%$$$M
+\subsubsection*{\texttt{+ <<create>> DisplayData(latitude : double, longitude : double, name : String, mapId : int)}}%$$$M
 \paragraph*{Beschreibung}
 Erstellt eine neue DisplayData-Instanz.
 \paragraph*{Parameter}
@@ -19,7 +21,7 @@ Erstellt eine neue DisplayData-Instanz.
     \item mapId : int MapId des Kartenobjekts.
 \end{itemize}
 
-\subsubsection{\texttt{+ getPosition() : IGeoPoint}}%$$$M
+\subsubsection*{\texttt{+ getPosition() : IGeoPoint}}%$$$M
 \paragraph*{Beschreibung}
 Gibt die Position auf der Karte zurück.
 \paragraph*{Parameter}
@@ -27,7 +29,7 @@ Keine.
 \paragraph*{Rückgabewert}
 IGeoPoint mit den Koordinaten.
 
-\subsubsection{\texttt{+ getName() : String}}%$$$M
+\subsubsection*{\texttt{+ getName() : String}}%$$$M
 \paragraph*{Beschreibung}
 Gibt den Anzeigenamen zurück.
 \paragraph*{Parameter}
@@ -35,7 +37,7 @@ Keine.
 \paragraph*{Rückgabewert}
 String mit Anzeigenamen.
 
-\subsubsection{\texttt{+ getMapId() : int}}%$$$M
+\subsubsection*{\texttt{+ getMapId() : int}}%$$$M
 \paragraph*{Beschreibung}
 Gibt die MapId des Kartenobjekts zurück.
 \paragraph*{Parameter}
