Added overlooked actions

--- a/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/main.tex
@@ -1,1 +1,7 @@
-\section{Änderungen}
+\newpage
+\subsection{\Large Änderungen}
+
+\inprelmod{01_Akzeptieren}
+\inprelmod{02_Revidieren}
+\inprelmod{03_Akzeptiere_Alle}
+\inprelmod{04_Revidiere_Alle}
