--- a/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/02_Revidieren/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/02_Revidieren/main.tex
@@ -1,4 +1,5 @@
-\subsubsection{Revidieren}
+\newpage
+\subsubsection{\Large Revidieren}
 
 Die Aktion die ausgeführt wird, um eine Änderung zu revidieren.
 
