--- a/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/03_Akzeptiere_Alle/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/03_Akzeptiere_Alle/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Akzeptiere Alle}
+\subsubsection{\Large Akzeptiere Alle}
 
 Die Aktion die ausgeführt wird, um alle Änderungen anzunehmen.
 
@@ -13,6 +13,6 @@ Die Änderungen werden nicht mehr angezeigt und sind nicht mehr gespeichert. Die
 
 \paragraph*{Durchführung}
 \begin{enumerate}
-    \item Rufe auf jeder Änderung die Methode \ver#Change::perform#  der zugehörenden Instanz von \verb#Change# auf.
+    \item Rufe auf jeder Änderung die Methode \verb#Change::perform#  der zugehörenden Instanz von \verb#Change# auf.
     \item Entferne alle Änderungen aus der Sammlung an Änderungen.
 \end{enumerate}
