Fix typos as requested in 'BlacklistService(Imp)'

--- a/Kapitel/00_Backend/Services/BlacklistService/getBlacklist_ListString/main.tex
+++ b/Kapitel/00_Backend/Services/BlacklistService/getBlacklist_ListString/main.tex
@@ -4,6 +4,6 @@ Definiert das Zurückgeben einer Liste aller Zeichenketten, die in der Blacklist
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
-Die Methode ermöglicht, dass ein Administrator die Liste aller Zeichenkette, die in der Blacklist hinterlegt sind, anfragen und zurückbekommen kann.
+Die Methode ermöglicht, dass ein Administrator die Liste aller Zeichenketten, die in der Blacklist hinterlegt sind, anfragen und zurückbekommen kann.
 \paragraph*{Rückgabewert}
-Die Liste aller Zeichenkette, die in der Blacklist hinterlegt sind.
+Die Liste aller Zeichenketten, die in der Blacklist hinterlegt sind.
