--- a/Kapitel/00_Backend/Services/BlacklistService/isBlacklisted_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/BlacklistService/isBlacklisted_String_boolean/main.tex
@@ -1,8 +1,8 @@
 \paragraph{\texttt{isBlacklisted(word : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Definiert das Überprüfen, ob eine Zeichenkette in die Blacklist aufgenommen ist.
+Definiert das Überprüfen, ob eine Zeichenkette in der Blacklist aufgenommen ist.
 \paragraph*{Beschreibung}
-Die Methode ermöglicht zu erfahren, ob eine Zeichenkette in die Blacklist aufgenommen ist.
+Die Methode ermöglicht zu erfahren, ob eine Zeichenkette in der Blacklist aufgenommen ist.
 Hierfür wird die zu überprüfende Zeichenkette übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
@@ -11,4 +11,4 @@ Hierfür wird die zu überprüfende Zeichenkette übergeben.
     		Die zu überprüfende Zeichenkette.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn die übergebene Zeichenkette in die Blacklist anfgenommen ist, ansonsten falsch.
+Wahr, wenn die übergebene Zeichenkette in der Blacklist anfgenommen ist, ansonsten falsch.
