--- a/Kapitel/00_Backend/Services/BlacklistServiceImp/isBlacklisted_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/BlacklistServiceImp/isBlacklisted_String_boolean/main.tex
@@ -1,9 +1,9 @@
 \paragraph{\texttt{isBlacklisted(word : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Überprüft, ob eine Zeichenkette in die Blacklist aufgenommen ist.
+Überprüft, ob eine Zeichenkette in der Blacklist aufgenommen ist.
 \paragraph*{Beschreibung}
 Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{BlacklistService}.
-Die Methode ermöglicht zu erfahren, ob eine Zeichenkette in die Blacklist aufgenommen ist.
+Die Methode ermöglicht zu erfahren, ob eine Zeichenkette in der Blacklist aufgenommen ist.
 Hierfür wird die zu überprüfende Zeichenkette übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
@@ -12,4 +12,4 @@ Hierfür wird die zu überprüfende Zeichenkette übergeben.
     		Die zu überprüfende Zeichenkette.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn die übergebene Zeichenkette in die Blacklist anfgenommen ist, ansonsten falsch.
+Wahr, wenn die übergebene Zeichenkette in der Blacklist anfgenommen ist, ansonsten falsch.
