--- a/Kapitel/00_Backend/Services/BlacklistServiceImp/removeFromBlacklist_String_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/BlacklistServiceImp/removeFromBlacklist_String_boolean/main.tex
@@ -6,7 +6,7 @@ Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{Bla
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
 Die Methode ermöglicht, dass ein Administrator eine Zeichenkette aus der Blacklist entfernen kann.
-Dies hat zur Folge, dass ein Alias-Vorschlag, der genau aus dieser Zeichenkette zusammengesetzt ist, nicht mehr herausgefiltert und somit die Möglichkeit hat, angenommen zu werden.
+Dies hat zur Folge, dass ein Alias-Vorschlag, der genau aus dieser Zeichenkette zusammengesetzt ist, nicht mehr herausgefiltert wird und somit die Möglichkeit hat, angenommen zu werden.
 Hierfür wird die aus der Blacklist zu entfernende Zeichenkette übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
