--- a/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/02_logout/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/02_logout/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+login() : boolean}}%$$$M
+\paragraph{\texttt{+ logout() : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Ermöglicht einem Benutzer sich abzumelden.
 \paragraph*{Beschreibung}
