--- a/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/06_getInstance/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/01_AuthManager/06_getInstance/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{static +getInstance() : AuthManager}}%$$$M
+\paragraph{\texttt{+ static getInstance() : AuthManager}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die aktuelle \verb#AuthManager#-Instanz zurück.
 \paragraph*{Beschreibung}
