--- a/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/03_getInstance/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/04_Changes/03_getInstance/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{static +getInstance() : Changes}}%$$$M
+\paragraph{\texttt{+ static getInstance() : Changes}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die aktuelle \verb#Changes#-Instanz zurück.
 \paragraph*{Beschreibung}
