--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/03_blacklistAliasSuggestion/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/02_Mutations/03_blacklistAliasSuggestion/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{+blacklistAliasSuggestion(alias: Alias) : boolean}}%$$$M
+\paragraph{\texttt{+ blacklistAliasSuggestion(alias: Alias) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Setze den gegebenen Alias-Vorschlag auf die Blacklist.
 \paragraph*{Beschreibung}
