--- a/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/03_getInstance/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/05_Backend/03_getInstance/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{static +getInstance() : Backend}}%$$$M
+\paragraph{\texttt{+ static getInstance() : Backend}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die aktuelle \verb#Backend#-Instanz zurück.
 \paragraph*{Beschreibung}
