--- a/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/05_constructor/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/03_ChangeAction/05_constructor/main.tex
@@ -1,4 +1,4 @@
-\paragraph{\texttt{<<create>> +constructor(change: Change, metadata: JSON, category: String)}}%$$$M
+\paragraph{\texttt{+ <<create>> constructor(change: Change, metadata: JSON, category: String)}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erzeuge ein Änderungsobjekt.
 \paragraph*{Beschreibung}
