Added in class diagram

--- a/Kapitel/04_Admin_Panel/04_Klassen/main.tex
+++ b/Kapitel/04_Admin_Panel/04_Klassen/main.tex
@@ -1,6 +1,7 @@
 \newpage
 \section{Klassen}
 
+\inprelmod{00_Beschreibung}
 \inprelmod{01_AuthManager}
 \inprelmod{02_Change}
 \inprelmod{03_ChangeAction}
