Removed larger titles due to table of content display error.

--- a/Kapitel/04_Admin_Panel/03_Aktionen/01_Alias_Vorschläge/02_Ablehnen/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/01_Alias_Vorschläge/02_Ablehnen/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsubsection{\Large Ablehnen}
+\subsubsection{Ablehnen}
 
 Die Aktion die ausgeführt wird, um einen Alias-Vorschlag abzulehnen.
 
