--- a/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/02_Revidieren/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/02_Revidieren/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsubsection{\Large Revidieren}
+\subsubsection{Revidieren}
 
 Die Aktion die ausgeführt wird, um eine Änderung zu revidieren.
 
