--- a/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/03_Akzeptiere_Alle/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/03_Akzeptiere_Alle/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\Large Akzeptiere Alle}
+\subsubsection{Akzeptiere Alle}
 
 Die Aktion die ausgeführt wird, um alle Änderungen anzunehmen.
 
