--- a/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/04_Revidiere_Alle/main.tex
+++ b/Kapitel/04_Admin_Panel/03_Aktionen/04_Änderungen/04_Revidiere_Alle/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\subsubsection{\Large Revidiere Alle}
+\subsubsection{Revidiere Alle}
 
 Die Aktion die ausgeführt wird, um alle Änderungen zu revidieren.
 
