--- a/Kapitel/00_Backend/Services/AliasSuggestionServiceImp/getAliasSuggestions_int,int_ListAliasSuggestion/main.tex
+++ b/Kapitel/00_Backend/Services/AliasSuggestionServiceImp/getAliasSuggestions_int,int_ListAliasSuggestion/main.tex
@@ -8,7 +8,7 @@ Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufge
 Die Methode ermöglicht, dass eine Liste der Alias-Vorschläge angefragt werden kann.
 Es werden lediglich die Alias-Vorschläge angezeigt, die die Mindestanzahl von positiven oder negativen Bewertungen erfüllen.
 Hierfür wird die Mindestanzahl von positiven und negativen Bewertungen übergeben, die ein Alias-Vorschlag erfüllen muss, damit er angezeigt wird.
-Es ist möglich, einen oder beide Parameter nicht zu übergeben, dann wird der bereits festgelegte Standardwert berücksichtigt.
+Es ist möglich, für einen oder beide Parameter den Wert \texttt{null} zu übergeben, dann wird der bereits festgelegte Standardwert berücksichtigt.
 \paragraph*{Parameter}
 \begin{itemize}
 	\item minValToShowPos : int
