--- a/Kapitel/02_App/08_DocumentViewer/DocumentType/main.tex
+++ b/Kapitel/02_App/08_DocumentViewer/DocumentType/main.tex
@@ -1,4 +1,4 @@
-\subsection{DocumentType}
+\subsubsection{DocumentType}
 \paragraph*{Typ}
 Enum.
 \paragraph*{Beschreibung}
@@ -11,3 +11,11 @@ Dieser Enum enthält die verschiedenen Arten von anzeigbaren Textdokumenten.
     \item \textbf{HELP\_PAGE}: Hilfsseite, die einige wichtige Funktionen der App erklärt.
     \item \textbf{LICENSES}: Lizenzen von Open-Source Bibliotheken, die in der App verwendet wurden.
 \end{itemize}
+
+\subsubsection*{\texttt{+ getId() : int}}%$$$M
+\paragraph*{Beschreibung}
+Gibt die Id des DokumentTypes zurück.
+\paragraph*{Parameter}
+Keine.
+\paragraph*{Rückgabewert}
+int, Id des DokumentTypes.
