--- a/Kapitel/02_App/09_DataManagement/main.tex
+++ b/Kapitel/02_App/09_DataManagement/main.tex
@@ -1,5 +1,8 @@
-
-%Alles zum Aktualisierungsvorgang der lokalen Datenbank
+\section{Daten Management}
+\paragraph*{Paketname}
+datamanagement
+\paragraph*{Beschreibung}
+Dieses Paket enthält zusätzliche Funktionalität, um die lokale Datenbank zu aktualisieren.
 
 \inprelmod{DataUpdateController}
 \inprelmod{DataUpdater}
