--- a/Kapitel/02_App/09_DataManagement/DataUpdater/main.tex
+++ b/Kapitel/02_App/09_DataManagement/DataUpdater/main.tex
@@ -1,4 +1,4 @@
-\section{DataUpdater}
+\subsubsection{DataUpdater}
 \paragraph*{Typ}
 Interface.
 \paragraph*{Beschreibung}
@@ -9,7 +9,7 @@ ausgeführt werden. DataUpdater mit gleicher Priorität sind voneinander unabhä
 die Reihenfolge ihrer Ausführung ist egal.\\
 Da sich die Aktualisierung je nach Datentyp unterscheidet, wird hier eine Strategie benutzt.
 
-\subsubsection{\texttt{+ getPriority() : int}}%$$$M
+\subsubsection*{\texttt{+ getPriority() : int}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die Priorität zurück.
 \paragraph*{Beschreibung}
@@ -21,7 +21,7 @@ Keine.
 \paragraph*{Rückgabewert}
 int, Priorität des DataUpdaters.
 
-\subsubsection{\texttt{+ updateData() : boolean}}%$$$M
+\subsubsection*{\texttt{+ updateData() : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Führt die Aktualisierung der Daten durch.
 \paragraph*{Beschreibung}
@@ -36,7 +36,7 @@ Keine.
 boolean, ob die Aktualisierung erfolgreich war.
 
 %-----------------------------------------------
-\section{GlobalAliasUpdater}
+\subsubsection{GlobalAliasUpdater}
 \paragraph*{Typ}
 Implementiert DataUpdater.
 \paragraph*{Beschreibung}
