Finalized Model/Data

--- a/Kapitel/02_App/10_DataStorage/Daten/Datenklassen/main.tex
+++ b/Kapitel/02_App/10_DataStorage/Daten/Datenklassen/main.tex
@@ -84,3 +84,17 @@ Diese Datenklasse speichert einen Alias.
     \item term : String Alternativer Bezeichner (Alias) für Kartenobjekt.
     \item mapId : int MapId des zugehörigen Kartenobjekts
 \end{itemize}
+
+%---------------------------------------------------
+\paragraph{PersonEntity}
+\subparagraph*{Typ}
+Datenklasse.
+\subparagraph*{Beschreibung}
+Diese Datenklasse speichert die Daten einer Person.
+\subparagraph*{Daten}
+\begin{itemize}
+    \item title : String Titel der Person.
+    \item firstName : String Vorname.
+    \item lastName : String Nachname.
+    \item mapId : int MapId des Kartenobjekts, dem diese Person zugeordnet ist.
+\end{itemize}
