--- a/Kapitel/02_App/10_DataStorage/Daten/main.tex
+++ b/Kapitel/02_App/10_DataStorage/Daten/main.tex
@@ -1,6 +1,13 @@
-\subsection{Datenspeicherung}
+\subsection{Modifizierbare Daten}
+Die Speicherung aller Daten, die sich zur Laufzeit ändern können (oder zukünftig könnten), 
+ist in diesem Abschnitt erläutert.
 
-\inprelmod{Ressourcen}
 \inprelmod{Datenklassen}
 \inprelmod{SharedPreferences}
 \inprelmod{FileSystem}
+
+\subsection{Nicht-modifizierbare Daten}
+Die Speicherung der Daten, die die App zur Laufzeit benötigt, die sich aber nicht ändern, 
+ist in diesem Abschnitt erläutert.
+
+\inprelmod{Ressourcen}
