--- a/Kapitel/02_App/10_DataStorage/Daten/Ressourcen/main.tex
+++ b/Kapitel/02_App/10_DataStorage/Daten/Ressourcen/main.tex
@@ -4,9 +4,9 @@ Zum Speichern von Ressourcen werden die \href{https://developer.android.com/refe
 Folgende Ressourcen sind gespeichert:
 \begin{itemize}
     \item Anzeige-Strings: Alle Zeichenketten, die in der App angezeigt werden, 
-    müssen in allen unterstützten Sprachen als String-Ressource vorliegen.\\
+    müssen in allen unterstützten Sprachen als String-Ressource vorliegen.
     \item Textdokumente: Folgende Textdokumente müssen im Markdown-Format in allen unterstützten 
-    Sprachen gespeichert sein:\\
+    Sprachen gespeichert sein:
     \begin{itemize}
         \item Datenschutzerklärung
         \item Impressum
@@ -14,5 +14,6 @@ Folgende Ressourcen sind gespeichert:
         \item Lizenzen
     \end{itemize}
     \item Themes: Alle Themes müssen als Theme-Ressourcen gespeichert sein. 
-    Alle in der UI verwendeten Farben müssen aus einem dieser Themes stammen.\\
+    Alle in der UI verwendeten Farben müssen aus einem dieser Themes stammen.
+    \item Liste aller verfügbaren Sprachen.
 \end{itemize}
