--- a/Kapitel/02_App/10_DataStorage/Daten/SharedPreferences/main.tex
+++ b/Kapitel/02_App/10_DataStorage/Daten/SharedPreferences/main.tex
@@ -8,4 +8,5 @@ Folgende Daten werden über Shared Preferences gespeichert:
     \item storeSearches : boolean Wert, ob die letzten Suchbegriffe im Suchverlauf gespeichert werden.
     \item lastPosLongitude : double Längengrad der gespeicherten letzten Position.
     \item lastPosLatitude : double Breitengrad der gespeicherten letzten Position.
+    \item globalAliasVersion : int Version der lokalen Kopie der globalen Alias-Tabelle.
 \end{itemize}
