Add javadoc for method 'findByName_String_boolean'
Add javadoc for method
'Kapitel/00_Backend/Repositories/AliasRepository/
findByName_String_boolean' in '/main.tex'
(in the same above mentioned path).

--- a/Kapitel/00_Backend/Repositories/AliasRepository/main.tex
+++ b/Kapitel/00_Backend/Repositories/AliasRepository/main.tex
@@ -2,4 +2,5 @@
 
 \inprelmod{Beschreibung}
 \inprelmod{findByMapID_int_ListAlias}
+\inprelmod{findByName_String_boolean}
 \inprelmod{deleteByName_String_boolean}
